--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "~3.8.10",
+    "gulp-autoprefixer": "^2.0.0",
     "gulp-plumber": "~0.6.6",
     "gulp-sass": "~1.1.0",
     "gulp-webserver": "~0.8.7"
